--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -90,7 +90,7 @@
 
     <script>
 
-var data = [{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":15},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":11},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":1},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":47},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":1},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
+var data = [{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":3},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":16},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":13},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":2},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":47},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":1},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
             top: 20,
@@ -169,7 +169,7 @@ var data = [{"month":"October 2021","arrests":0},{"month":"September 2021","arre
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total individuals charged: 97<br>For people charged multiple times, only the first charge is counted here.</em>");
+    .html("<em>Total individuals charged: 104<br>For people charged multiple times, only the first charge is counted here.</em>");
 
 
     </script>
