--- a/viz/centers/Haiwan_Activity_List.html
+++ b/viz/centers/Haiwan_Activity_List.html
@@ -56,9 +56,9 @@
 
 			tr:nth-child(even) {background: #e2efdb}
 
-			tr td:nth-child(3) {text-align: center;}
+			/* tr td:nth-child(3) {text-align: center;}
 
-			tr td:nth-child(6) {text-align: center;}
+			tr td:nth-child(6) {text-align: center;} */
 
 			td {
 					padding: 4px;
