--- a/viz/centers/Haiwan_Activity_List_English_abbr.html
+++ b/viz/centers/Haiwan_Activity_List_English_abbr.html
@@ -60,8 +60,8 @@
 					font-size: 12px;
 					/* border: 1px solid #CCC; */
 					font-family: Arial, Helvetica, sans-serif;
-					margin-left: 10px;
-  				margin-right: 10px;
+					margin-left: auto;
+  				margin-right: auto;
 			}
 			table.tableizer-table {border-spacing: 0}
 
