--- a/viz/centers/Haiwan_Activity_List_English_abbr.html
+++ b/viz/centers/Haiwan_Activity_List_English_abbr.html
@@ -8,6 +8,13 @@
 
       <style>
 
+			body {
+					/* max-width: 255px; */
+					min-width:255px;
+			    /* font-family: "Arial", sans-serif;
+			    font-size: 12px; */
+			}
+
 			#subhed
 			{
 				overflow:hidden;
@@ -153,7 +160,7 @@
 
 <!–– add your tableizer data above this line––>
 
-<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION</div>
+<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION caption caption caption caption</div>
 
 
 
