--- a/viz/centers/Haiwan_Activity_List_English_abbr.html
+++ b/viz/centers/Haiwan_Activity_List_English_abbr.html
@@ -160,7 +160,7 @@
 
 <!–– add your tableizer data above this line––>
 
-<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION caption caption caption caption</div>
+<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION caption caption caption caption1</div>
 
 
 
