--- a/viz/centers/Haiwan_Activity_List_English_abbr.html
+++ b/viz/centers/Haiwan_Activity_List_English_abbr.html
@@ -9,10 +9,7 @@
       <style>
 
 			body {
-					/* max-width: 255px; */
-					min-width:500px;
-			    /* font-family: "Arial", sans-serif;
-			    font-size: 12px; */
+					/* min-width:500px; */
 			}
 
 			#subhed
@@ -160,7 +157,7 @@
 
 <!–– add your tableizer data above this line––>
 
-<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION caption caption caption caption1</div>
+<div id="footer">NEED TO REPLACE THIS CAPTION WITH SOMETHING THAT INCLUDES MORE CAPTION-RELATED INFORMATION AND ALSO THAT IS A CAPTION caption caption caption caption12</div>
 
 
 
