--- a/viz/centers/Haiwan_Activity_List_English.html
+++ b/viz/centers/Haiwan_Activity_List_English.html
@@ -81,7 +81,6 @@
 
 <div id="header">January丨Haiwan Town New Era Civilization Practice Volunteer Service Activity Menu</div>
 
-<!-- <div id="subhed">Note: All offenses detailed here derive from Hong Kong government allegations and neither the authors of this article nor ChinaFile’s editors have independently verified them.<br><br>Total number of arrests: NUM_INDIV_ARRESTS<br><br>Data cut-off date: NEW_DATE_HERE</div> -->
 	<table class="tableizer-table">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
@@ -90,7 +89,7 @@
 <thead><th> </th><th>Activity Theme</th><th>Activity Type</th><th>Activity Time</th><th>Event Location</th><th>Implementing Unit</th></tr></thead><tbody>
  <tr><td>1</td><td>Studying Party History Activity</td><td>Theory Preaching</td><td>January 1</td><td>Residential Committee Activity Room</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>2</td><td>Propaganda on Epidemic Prevention during Chinese New Year</td><td>Theory Preaching</td><td>January 4</td><td>Residential Committee Activity Room</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>3</td><td>Most Beloved under the Blue Sky</td><td>Caring Services</td><td>January 4</td><td>Within the Xinghuo One Neighborhood Committee's administrative area</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>3</td><td>Most Beloved under the Blue Sky</td><td>Caring Services</td><td>January 4</td><td>Within the Xinghuo One Neighborhood Committee&#8217;s administrative area</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>4</td><td>Studying the Spirit of the 19th Central Committee Sixth Plenary Session</td><td>Theory Preaching</td><td>January 5</td><td>Liaoyuan Neighborhood Committee</td><td>Liaoyuan Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>5</td><td>Happy Dance</td><td>Cultural Education</td><td>January 6</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>6</td><td>Party Member Activity——Movie Appreciation</td><td>Civilization Creation</td><td>January 6</td><td>Shilong Residential Committee Cultural Activity Room</td><td>Shilong Residential Area New Era Civilization Practice Station</td></tr>
@@ -101,17 +100,17 @@
  <tr><td>11</td><td>Anti-Counterfeiting Propaganda</td><td>Propaganda Lecture</td><td>January 10</td><td>Mingcheng Conference Room</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>12</td><td>Health Lecture Series</td><td>Science Popularization</td><td>January 11</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>13</td><td>Intentions for the Public Good</td><td>Caring Services</td><td>January 11</td><td>Shilong Residential Committee Cultural Activity Room</td><td>Shilong Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>14</td><td>Patriotic Health Volunteer Labor</td><td>Volunteer Service</td><td>January 12</td><td>Within the Xinghuo One Neighborhood Committee's administrative area</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>14</td><td>Patriotic Health Volunteer Labor</td><td>Volunteer Service</td><td>January 12</td><td>Within the Xinghuo One Neighborhood Committee&#8217;s administrative area</td><td>Xing One Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>15</td><td>Party Member Education</td><td>Theory Preaching</td><td>January 14</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>16</td><td>"Civilization in the Bay, Set Sail on a New Journey" "Arena Competition"</td><td>Civilization Creation</td><td>January 14</td><td>City Resident Center</td><td>Haiwan Town New Era Civilization Practice Sub-Center</td></tr>
+ <tr><td>16</td><td>&#8220;Civilization in the Bay, Set Sail on a New Journey&#8221; &#8220;Arena Competition&#8221;</td><td>Civilization Creation</td><td>January 14</td><td>City Resident Center</td><td>Haiwan Town New Era Civilization Practice Sub-Center</td></tr>
  <tr><td>17</td><td>Health Knowledge Lecture</td><td>Science Popularization</td><td>January 14</td><td>Yixing Neighborhood Committee Electronic Classroom</td><td>Yixing Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>18</td><td>Caring for Elderly Empty-Nesters</td><td>Volunteer Service</td><td>January 14</td><td>In residents' homes</td><td>Shilong Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>18</td><td>Caring for Elderly Empty-Nesters</td><td>Volunteer Service</td><td>January 14</td><td>In residents&#8217; homes</td><td>Shilong Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>19</td><td>Watching Hot Topics in the News</td><td>Legal Propaganda</td><td>January 15</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>20</td><td>Science Education</td><td>Science Popularization</td><td>January 17</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>21</td><td>Qipao Physique Class</td><td>Cultural Education</td><td>January 18</td><td>Shilong Residential Committee Cultural Activity Room</td><td>Shilong Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>22</td><td>Anti-Cult Propaganda</td><td>Legal Propaganda</td><td>January 18</td><td>Xinyi Village Pavilion</td><td>Xing Two Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>23</td><td>Cultural Activities with the Most Festive Chinese New Year Ambience</td><td>Cultural Education</td><td>January 18</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>24</td><td>"Sending Learning to Your Doorstep" Activity</td><td>Convenience Services</td><td>January 19</td><td>In residents' homes</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>24</td><td>&#8220;Sending Learning to Your Doorstep&#8221; Activity</td><td>Convenience Services</td><td>January 19</td><td>In residents&#8217; homes</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>25</td><td>Propaganda on Culture</td><td>Theory Preaching</td><td>January 20</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>26</td><td>Education to Raise Awareness of the Law</td><td>Science Popularization</td><td>January 21</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>27</td><td>Science Popularization Education</td><td>Science Popularization</td><td>January 21</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
@@ -121,17 +120,17 @@
  <tr><td>31</td><td>Party Members Send Regards to and Help the Poor</td><td>Caring Services</td><td>January 25</td><td>Liaoyuan Neighborhood Committee</td><td>Liaoyuan Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>32</td><td>Consumer Rights Protection Lecture</td><td>Propaganda Lecture</td><td>January 25</td><td>Mingcheng Conference Room</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>33</td><td>Education for Minors</td><td>Cultural Education</td><td>January 27</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>34</td><td>"Celebrating Lunar New Year Here Is Still Lunar New Year" Welcoming Spring Festival Activity</td><td>Convenience Services</td><td>January 28</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>34</td><td>&#8220;Celebrating Lunar New Year Here Is Still Lunar New Year&#8221; Welcoming Spring Festival Activity</td><td>Convenience Services</td><td>January 28</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>35</td><td>Sending Regards for Spring Festival</td><td>Caring Services</td><td>January 28</td><td>Residential Committee Activity Room</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>36</td><td>Clearing out the Underworld Propaganda Seminar</td><td>Legal Propaganda</td><td>January 28</td><td>Yixing Neighborhood Committee Electronic Classroom</td><td>Yixing Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>37</td><td>Family Education</td><td>Theory Preaching</td><td>January 29</td><td>May Fourth Life Station</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>38</td><td>Safety Patrol</td><td>Volunteer Service</td><td>Daily</td><td>Within Xing Two's administrative area</td><td>Xing Two Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>38</td><td>Safety Patrol</td><td>Volunteer Service</td><td>Daily</td><td>Within Xing Two&#8217;s administrative area</td><td>Xing Two Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>39</td><td>Kindness Hairdressing Volunteer Service Activity</td><td>Volunteer Service</td><td>Daily</td><td>Haiwan Town Kindness Hairdresser Shop</td><td>Haiwan Town New Era Civilization Practice Sub-Center</td></tr>
  <tr><td>40</td><td>Village and Building Protection Team</td><td>Volunteer Service</td><td>Daily</td><td>May Fourth Highway No. 1131</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>41</td><td>Maple Leaf Civilization Volunteer Service</td><td>Volunteer Service</td><td>Daily</td><td>Hongwei New Village</td><td>Hongwei Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>42</td><td>365 Caring for the Elderly Empty-Nesters</td><td>Volunteer Service</td><td>Daily</td><td>May Fourth Highway No. 1131</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>43</td><td>A Clean Home Is Everyone's Responsibility</td><td>Volunteer Service</td><td>Every Thursday</td><td>Mingcheng Community</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
- <tr><td>44</td><td>Common People's Square Lecture</td><td>Science Popularization</td><td>Every Friday</td><td>May Fourth Common People's Square</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>43</td><td>A Clean Home Is Everyone&#8217;s Responsibility</td><td>Volunteer Service</td><td>Every Thursday</td><td>Mingcheng Community</td><td>Mingcheng Residential Area New Era Civilization Practice Station</td></tr>
+ <tr><td>44</td><td>Common People&#8217;s Square Lecture</td><td>Science Popularization</td><td>Every Friday</td><td>May Fourth Common People&#8217;s Square</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>45</td><td>Haicheng Home Cleanup</td><td>Volunteer Service</td><td>Weekly</td><td>Haicheng Garden</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>46</td><td>Garbage Pickup Service</td><td>Volunteer Service</td><td>Weekly</td><td>Zhonggang Village Three</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
  <tr><td>47</td><td>Patriotic Health Activity</td><td>Volunteer Service</td><td>Weekly</td><td>May Fourth Highway No. 1131</td><td>Zhonggang Residential Area New Era Civilization Practice Station</td></tr>
@@ -140,23 +139,6 @@
 
 <!–– add your tableizer data above this line––>
 
-<script src="https://jessicachinafile.github.io/tablefilter/tablefilter.js"></script>
 
-<script>
-var filtersConfig = {
-    base_path: 'https://jessicachinafile.github.io/tablefilter/',
-    auto_filter: true,
-    auto_filter_delay: 1100, //milliseconds
-    filters_row_index: 1,
-    state: true,
-    alternate_rows: true,
-    rows_counter: true,
-    btn_reset: true,
-    status_bar: true,
-    msg_filter: 'Filtering...'
-};
-var tf = new TableFilter('filter', filtersConfig);
-tf.init();
-</script>
 
 </body> </html>
