--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -6721,6 +6721,28 @@
       <td>2022-01-11</td>
       <td>China</td>
     </tr>
+    <tr>
+      <td>Georgian One Belt One Road Business House</td>
+      <td>格鲁吉亚一带一路商务馆</td>
+      <td>Council for the Promotion of International Trade, Guangdong</td>
+      <td>中国国际贸易促进委员会广东省委员会</td>
+      <td>Georgia</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2022-01-21</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
+      <td>Russia Jinshang Chamber of Commerce</td>
+      <td>俄罗斯晋商总商会</td>
+      <td>Shanxi Department of Commerce</td>
+      <td>山西省商务厅</td>
+      <td>Russia</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Shanxi</td>
+      <td>2022-01-18</td>
+      <td>China</td>
+    </tr>
   </tbody>
 </table>
 
