--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -8286,13 +8286,30 @@
       <td>Centre for Asian Philanthropy and Society (CAPS)</td>
       <td>亚洲慈善与社会中心</td>
       <td>Hong Kong</td>
-      <td>2021 Doing Good Index (DGI 2020)</td>
+      <td>2020 Doing Good Index (DGI 2020)</td>
       <td>2020行善指数（DGI 2020）</td>
       <td>Shanghai City / Sichuan Province / Beijing City / Guangdong Province</td>
       <td>上海市,四川省,北京市,广东省</td>
       <td>Civil Society Capacity-Building</td>
       <td>2020-09-01</td>
       <td>2021-08-31</td>
+      <td>Shanghai Pudong Development Center</td>
+      <td>上海浦东非营利组织发展中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shanghai City, Pudong New District Bureau of Civil Affairs</td>
+      <td>上海市浦东新区民政局</td>
+    </tr>
+    <tr>
+      <td>Centre for Asian Philanthropy and Society (CAPS)</td>
+      <td>亚洲慈善与社会中心</td>
+      <td>Hong Kong</td>
+      <td>2022 Doing Good Index (DGI 2022)</td>
+      <td>2022行善指数（DGI 2022）</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Civil Society Capacity-Building</td>
+      <td>2022-01-15</td>
+      <td>2022-12-31</td>
       <td>Shanghai Pudong Development Center</td>
       <td>上海浦东非营利组织发展中心</td>
       <td>Non-Profit or Foundation</td>
@@ -11307,6 +11324,23 @@
       <td>Hospital or Medical Center</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>China Yu Family Fellowship Association</td>
+      <td>中华俞氏宗亲联谊总会</td>
+      <td>Unknown</td>
+      <td>Inherit and Promote Yu Dayou's Anti-Japanese Patriotic Spirit</td>
+      <td>传承弘扬俞大猷抗倭爱国精神</td>
+      <td>Fujian Province / Guangdong Province / Zhejiang Province / Guangxi Zhuang Autonomous Region / Shanghai City / Jiangsu Province / Jiangxi Province</td>
+      <td>福建省,广东省,浙江省,广西壮族自治区,上海市,江苏省,江西省</td>
+      <td>Unknown</td>
+      <td>2022-02-20</td>
+      <td>2023-02-19</td>
+      <td>Quanzhou City, Luojiang District Haihun Yu Dayou Cultural Protection Center</td>
+      <td>泉州市洛江区海魂俞大猷文化保护中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Quanzhou City, Luojiang District Bureau of Culture, Sport, and Tourism</td>
+      <td>泉州市洛江区文化体育和旅游局</td>
     </tr>
     <tr>
       <td>China-America Association for Public Affairs</td>
@@ -27870,6 +27904,23 @@
       <td>Hong Kong Polytechnic University</td>
       <td>香港理工大学</td>
       <td>Hong Kong</td>
+      <td>“Five Whole Cares" Concept Program for Hospice Social Worker Service with Terminal Cancer Patients</td>
+      <td>五全照顾理念的癌症晚期患者宁养社工服务项目</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Health</td>
+      <td>2021-09-01</td>
+      <td>2022-08-31</td>
+      <td>Changsha County Social Work Association</td>
+      <td>长沙县社工协会</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Polytechnic University</td>
+      <td>香港理工大学</td>
+      <td>Hong Kong</td>
       <td>Workshop Promoting Parent-Child Relationships: One Person, One Story Theater Family Social Work Demonstration</td>
       <td>亲子关系促进工作坊一人一故事剧场家庭社会工作示范</td>
       <td>Sichuan Province</td>
@@ -27967,23 +28018,6 @@
       <td>Non-Profit or Foundation</td>
       <td>Yangzhou City Bureau of Civil Affairs</td>
       <td>扬州市民政局</td>
-    </tr>
-    <tr>
-      <td>Hong Kong Polytechnic University</td>
-      <td>香港理工大学</td>
-      <td>Hong Kong</td>
-      <td>“Five Whole Cares" Concept Program for Hospice Social Worker Service with Terminal Cancer Patients</td>
-      <td>五全照顾理念的癌症晚期患者宁养社工服务项目</td>
-      <td>Hunan Province</td>
-      <td>湖南省</td>
-      <td>Health</td>
-      <td>2021-09-01</td>
-      <td>2022-08-31</td>
-      <td>Changsha County Social Work Association</td>
-      <td>长沙县社工协会</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
     </tr>
     <tr>
       <td>Hong Kong Qing Yuan Youth Exchange Promotion Association</td>
@@ -33169,6 +33203,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Shanghai Commission of Education</td>
       <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Jubilee Cares Limited</td>
+      <td>禧福乐华有限公司</td>
+      <td>Hong Kong</td>
+      <td>Operation Dandelion Love</td>
+      <td>蒲公英爱心行动</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Poverty Alleviation, Youth</td>
+      <td>2022-01-01</td>
+      <td>2022-12-31</td>
+      <td>Pingyu County, Yangcheng Town Central School</td>
+      <td>平舆县阳城镇中心学校</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Junior Chamber International Macao, China</td>
@@ -39153,6 +39204,23 @@
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Macau Insurers' Association</td>
+      <td>澳门保险公会</td>
+      <td>Macau</td>
+      <td>Hengqin and Macau Insurance Industry Development Cooperation Memorandum of Understanding Signing Ceremony</td>
+      <td>琴澳保险业发展合作备忘录签署仪式</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Trade/Industry Association</td>
+      <td>2021-12-30</td>
+      <td>2022-03-31</td>
+      <td>Hengqin Finance Association</td>
+      <td>珠海市横琴新区金融行业协会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>直接登记</td>
     </tr>
     <tr>
       <td>Macau Interior Design Industry Federation</td>
@@ -47536,6 +47604,23 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Philip K.H. Wong Foundation</td>
+      <td>黄乾亨基金</td>
+      <td>Hong Kong</td>
+      <td>A Cross-Diagnostic Study of Anhedonia and Lack of Motivation</td>
+      <td>快感缺失与动机缺乏的跨诊断研究</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Health</td>
+      <td>2022-03-01</td>
+      <td>2023-02-28</td>
+      <td>Chinese Academy of Sciences Institute of Psychology</td>
+      <td>中国科学院心理研究所</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Philips Lighting Foundation</td>
       <td>飞利浦照明基金会</td>
       <td>The Netherlands</td>
@@ -51449,6 +51534,23 @@
       <td>Sir Horace Kadoorie International Foundation</td>
       <td>贺理士嘉道理爵士国际基金会</td>
       <td>Hong Kong</td>
+      <td>Gansu Rural Community Sustainable Elder Care Demonstration Program</td>
+      <td>甘肃农村社区可持续养老示范项目</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Aging, Rural Issues/Development</td>
+      <td>2022-02-10</td>
+      <td>2023-02-10</td>
+      <td>Gansu Weiyi Social Work Service Center</td>
+      <td>甘肃微一社会工作服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Sir Horace Kadoorie International Foundation</td>
+      <td>贺理士嘉道理爵士国际基金会</td>
+      <td>Hong Kong</td>
       <td>Henan Province Rural Village Area Preschool Integrated Education Pilot Program (Phase I)</td>
       <td>河南省农村地区学前融合教育试点项目（一期）</td>
       <td>Henan Province</td>
@@ -51529,23 +51631,6 @@
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Sir Horace Kadoorie International Foundation</td>
-      <td>贺理士嘉道理爵士国际基金会</td>
-      <td>Hong Kong</td>
-      <td>Gansu Rural Community Sustainable Elder Care Demonstration Program</td>
-      <td>甘肃农村社区可持续养老示范项目</td>
-      <td>Gansu Province</td>
-      <td>甘肃省</td>
-      <td>Aging, Rural Issues/Development</td>
-      <td>2022-02-10</td>
-      <td>2023-02-10</td>
-      <td>Gansu Weiyi Social Work Service Center</td>
-      <td>甘肃微一社会工作服务中心</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
     </tr>
     <tr>
       <td>Sir Horace Kadoorie International Foundation</td>
@@ -55099,6 +55184,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Shanghai City, Hongkou District Commission of Commerce</td>
       <td>上海市虹口区商务委员会</td>
+    </tr>
+    <tr>
+      <td>The Cat Fanciers’ Association</td>
+      <td>爱猫者协会</td>
+      <td>United States</td>
+      <td>CFA Cat-Themed Cultural Exhibition</td>
+      <td>CFA萌猫文化展</td>
+      <td>Chongqing City</td>
+      <td>重庆市</td>
+      <td>Unknown</td>
+      <td>2022-03-26</td>
+      <td>2022-04-25</td>
+      <td>Chongqing City, Shapingba District, Xinhao Cultural Service Center</td>
+      <td>重庆市沙坪坝区鑫浩文化服务中心</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
     </tr>
     <tr>
       <td>The Chen Wai Wai Vivien Founation Limited</td>
@@ -65860,6 +65962,23 @@
       <td>LLC</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Woven Charitable Foundation Limited</td>
+      <td>织乐慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Woven Rongle Hand in Hand Program</td>
+      <td>织乐融乐手牵手计划</td>
+      <td>Hubei Province</td>
+      <td>湖北省</td>
+      <td>Unknown</td>
+      <td>2022-01-01</td>
+      <td>2022-12-31</td>
+      <td>Wuhan City Rongle Disabilities Public Welfare Service Center</td>
+      <td>武汉市融乐助残公益服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>直接登记</td>
     </tr>
     <tr>
       <td>Wu Wei Harmony Foundation</td>
