--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1134,6 +1134,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>China Myanmar Economic Cooperation and Development Promotion Association</td>
+      <td>中国缅甸经济合作发展促进会</td>
+      <td>Chongqing Commission of Commerce</td>
+      <td>重庆市商务委员会</td>
+      <td>Myanmar</td>
+      <td>Arts and Culture, Media, Tourism, Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2022-02-16</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>China Service Ventures</td>
       <td>中美服务促进会</td>
       <td>Henan Department of Education</td>
@@ -1407,6 +1418,17 @@
       <td>Beijing</td>
       <td>2021-12-30</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Clinton Health Access Initiative</td>
+      <td>克林顿健康发展组织</td>
+      <td>Hainan Health Commission (formerly Hainan Health and Family Planning Commission)</td>
+      <td>海南省卫生健康委员会</td>
+      <td>United States</td>
+      <td>Health, International Relations/Exchange</td>
+      <td>Hainan</td>
+      <td>2022-01-10</td>
+      <td>Hainan</td>
     </tr>
     <tr>
       <td>Cloud Security Alliance</td>
@@ -1761,6 +1783,17 @@
       <td>Beijing, Guangdong, Sichuan, Tianjin, Zhejiang</td>
     </tr>
     <tr>
+      <td>Ellen MacArthur Foundation</td>
+      <td>艾伦·麦克阿瑟基金会</td>
+      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
+      <td>生态环境部</td>
+      <td>United Kingdom</td>
+      <td>Environment, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2022-01-06</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Energy Foundation</td>
       <td>能源基金会</td>
       <td>National Development and Reform Commission</td>
@@ -1992,6 +2025,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hubei, Hunan, Jiangsu, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>France-Panyu Friendship Society</td>
+      <td>法国番禺富善社</td>
+      <td>Guangdong Federation of Returned Overseas Chinese</td>
+      <td>广东省归国华侨联合会</td>
+      <td>France</td>
+      <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2022-01-05</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Fred Hollows Foundation</td>
       <td>弗雷德·霍洛基金会</td>
       <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
@@ -2133,6 +2177,17 @@
       <td>Shanghai</td>
       <td>2021-07-23</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Georgian One Belt One Road Business House</td>
+      <td>格鲁吉亚一带一路商务馆</td>
+      <td>Council for the Promotion of International Trade, Guangdong</td>
+      <td>中国国际贸易促进委员会广东省委员会</td>
+      <td>Georgia</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2022-01-21</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>German Academic Exchange Service (DAAD) (Beijing)</td>
@@ -2663,6 +2718,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Hong Kong Institute of Certified Public Accountants (Beijing)</td>
+      <td>香港会计师公会</td>
+      <td>Ministry of Finance</td>
+      <td>财政部</td>
+      <td>Hong Kong</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2022-01-11</td>
+      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Heilongjiang, Henan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Xinjiang Bingtuan, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Hong Kong Institute of Certified Public Accountants (Guangdong)</td>
       <td>香港会计师公会</td>
       <td>Ministry of Finance</td>
@@ -2694,6 +2760,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>Beijing, Guangdong, Jiangsu, Shandong, Shanghai, Sichuan, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Overseas Chinese General Chamber of Commerce</td>
+      <td>香港华侨华人总商会</td>
+      <td>Council for the Promotion of International Trade, Zhejiang</td>
+      <td>中国国际贸易促进委员会浙江省委员会</td>
+      <td>Hong Kong</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2022-02-21</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Hong Kong Pei Hua Education Foundation</td>
@@ -3221,6 +3298,17 @@
       <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
       <td>Tianjin</td>
       <td>2017-07-11</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>International Ski Federation (FIS)</td>
+      <td>国际滑雪联合会</td>
+      <td>Beijing Bureau of Sport</td>
+      <td>北京市体育局</td>
+      <td>Switzerland</td>
+      <td>International Relations/Exchange, Sport, Youth</td>
+      <td>Beijing</td>
+      <td>2022-01-11</td>
       <td>China</td>
     </tr>
     <tr>
@@ -4082,6 +4170,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Methanol Institute</td>
+      <td>全球甲醇行业协会</td>
+      <td>Ministry of Industry and Information Technology</td>
+      <td>工业和信息化部</td>
+      <td>Singapore</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2022-02-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Million Dollar Round Table (MDRT)</td>
       <td>百万圆桌（美国）</td>
       <td>Council for the Promotion of International Trade, Shanghai</td>
@@ -4201,6 +4300,28 @@
       <td>Beijing</td>
       <td>2019-06-17</td>
       <td>Beijing, Gansu, Guangdong, Hainan, Heilongjiang, Inner Mongolia, Jilin, Qinghai, Shaanxi, Shanghai, Shanxi, Sichuan, Yunnan</td>
+    </tr>
+    <tr>
+      <td>National Interprofessional Center for Dairy Economics</td>
+      <td>法国国家乳制品行业协会</td>
+      <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
+      <td>北京市商务局</td>
+      <td>France</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2022-02-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>National Zhejiang General Chamber of Commerce</td>
+      <td>全美浙江总商会</td>
+      <td>Council for the Promotion of International Trade, Zhejiang</td>
+      <td>中国国际贸易促进委员会浙江省委员会</td>
+      <td>United States</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2022-02-21</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Natural Resources Defense Council</td>
@@ -4354,6 +4475,17 @@
       <td>Law and Governance, Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2020-04-25</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Nigerian Entrepreneur Association</td>
+      <td>尼日利亚企业家协会</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>Nigeria</td>
+      <td>Arts and Culture, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2022-02-21</td>
       <td>China</td>
     </tr>
     <tr>
@@ -4962,6 +5094,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Sichuan, Tianjin, Zhejiang</td>
     </tr>
     <tr>
+      <td>Russia Jinshang Chamber of Commerce</td>
+      <td>俄罗斯晋商总商会</td>
+      <td>Shanxi Department of Commerce</td>
+      <td>山西省商务厅</td>
+      <td>Russia</td>
+      <td>International Relations/Exchange, Trade/Industry Association</td>
+      <td>Shanxi</td>
+      <td>2022-01-18</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Russia-China Commercial Affairs Center</td>
       <td>俄中商务中心</td>
       <td>Shanghai Hongqiao Business District Management Committee</td>
@@ -5048,6 +5191,17 @@
       <td>Shanghai</td>
       <td>2017-11-12</td>
       <td>Anhui, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Serbia Chamber of Commerce</td>
+      <td>塞尔维亚商会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Serbia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Shih Wing Ching Foundation</td>
@@ -5212,6 +5366,17 @@
       <td>Education, Health</td>
       <td>Beijing</td>
       <td>2017-01-23</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Soar Foundation</td>
+      <td>树华教育基金会</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+      <td>United States</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>Beijing</td>
+      <td>2022-02-14</td>
       <td>China</td>
     </tr>
     <tr>
@@ -5699,6 +5864,17 @@
       <td>Guangdong</td>
     </tr>
     <tr>
+      <td>TIC Council</td>
+      <td>TIC国际检验检测认证理事会</td>
+      <td>Shanghai Administration of Market Regulation</td>
+      <td>上海市市场监督管理局</td>
+      <td>Belgium</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Tin Ka Ping Foundation</td>
       <td>田家炳基金会</td>
       <td>Ministry of Education</td>
@@ -6172,6 +6348,17 @@
       <td>Anhui, Beijing, Fujian, Guangdong, Guangxi, Heilongjiang, Jiangsu, Jilin, Qinghai, Shanghai, Tibet, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Wine &amp; Spirit Education Trust (WSET)</td>
+      <td>葡萄酒与烈酒教育基金会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Wine Institute</td>
       <td>加州葡萄酒协会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -6632,116 +6819,6 @@
       <td>Yunnan</td>
       <td>2017-12-14</td>
       <td>Yunnan</td>
-    </tr>
-    <tr>
-      <td>TIC Council</td>
-      <td>TIC国际检验检测认证理事会</td>
-      <td>Shanghai Administration of Market Regulation</td>
-      <td>上海市市场监督管理局</td>
-      <td>Belgium</td>
-      <td>Science and Technology, Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2022-01-04</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>Wine &amp; Spirit Education Trust (WSET)</td>
-      <td>葡萄酒与烈酒教育基金会</td>
-      <td>Council for the Promotion of International Trade, Shanghai</td>
-      <td>上海市国际贸易促进委员会</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2022-01-04</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>Serbia Chamber of Commerce</td>
-      <td>塞尔维亚商会</td>
-      <td>Council for the Promotion of International Trade, Shanghai</td>
-      <td>上海市国际贸易促进委员会</td>
-      <td>Serbia</td>
-      <td>Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2022-01-04</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>France-Panyu Friendship Society</td>
-      <td>法国番禺富善社</td>
-      <td>Guangdong Federation of Returned Overseas Chinese</td>
-      <td>广东省归国华侨联合会</td>
-      <td>France</td>
-      <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
-      <td>Guangdong</td>
-      <td>2022-01-05</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Ellen MacArthur Foundation</td>
-      <td>艾伦·麦克阿瑟基金会</td>
-      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
-      <td>生态环境部</td>
-      <td>United Kingdom</td>
-      <td>Environment, International Relations/Exchange</td>
-      <td>Beijing</td>
-      <td>2022-01-06</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Clinton Health Access Initiative</td>
-      <td>克林顿健康发展组织</td>
-      <td>Hainan Health Commission (formerly Hainan Health and Family Planning Commission)</td>
-      <td>海南省卫生健康委员会</td>
-      <td>United States</td>
-      <td>Health, International Relations/Exchange</td>
-      <td>Hainan</td>
-      <td>2022-01-10</td>
-      <td>Hainan</td>
-    </tr>
-    <tr>
-      <td>Hong Kong Institute of Certified Public Accountants (Beijing)</td>
-      <td>香港会计师公会</td>
-      <td>Ministry of Finance</td>
-      <td>财政部</td>
-      <td>Hong Kong</td>
-      <td>Trade/Industry Association</td>
-      <td>Beijing</td>
-      <td>2022-01-11</td>
-      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Heilongjiang, Henan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Xinjiang Bingtuan, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>International Ski Federation (FIS)</td>
-      <td>国际滑雪联合会</td>
-      <td>Beijing Bureau of Sport</td>
-      <td>北京市体育局</td>
-      <td>Switzerland</td>
-      <td>International Relations/Exchange, Sport, Youth</td>
-      <td>Beijing</td>
-      <td>2022-01-11</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>Georgian One Belt One Road Business House</td>
-      <td>格鲁吉亚一带一路商务馆</td>
-      <td>Council for the Promotion of International Trade, Guangdong</td>
-      <td>中国国际贸易促进委员会广东省委员会</td>
-      <td>Georgia</td>
-      <td>International Relations/Exchange, Trade/Industry Association</td>
-      <td>Guangdong</td>
-      <td>2022-01-21</td>
-      <td>Guangdong</td>
-    </tr>
-    <tr>
-      <td>Russia Jinshang Chamber of Commerce</td>
-      <td>俄罗斯晋商总商会</td>
-      <td>Shanxi Department of Commerce</td>
-      <td>山西省商务厅</td>
-      <td>Russia</td>
-      <td>International Relations/Exchange, Trade/Industry Association</td>
-      <td>Shanxi</td>
-      <td>2022-01-18</td>
-      <td>China</td>
     </tr>
   </tbody>
 </table>
