--- a/viz/innovation/project_table1.html
+++ b/viz/innovation/project_table1.html
@@ -86,19 +86,19 @@
 
 
 	<thead><tr class="tableizer-firstrow">
-		<th style="width:10%">Company Name</th>
-		<th style="width:10%">Project Name</th>
-		<th style="width:10%">Project Category</th>
-		<th style="width:7%">Stage of Project</th>
+		<th style="width:5%">Company Name</th>
+		<th style="width:5%">Project Name</th>
+		<th style="width:5%">Project Category</th>
+		<th style="width:5%">Stage of Project</th>
 		<th>Project Summary</th>
-		<th style="width:10%">Timeframe</th>
-		<th style="width:10%">Investment Quota (Renminbi)</th></tr></thead><tbody>
+		<th style="width:5%">Dates</th>
+		<th style="width:5%">Investment Quota (Renminbi)</th></tr></thead><tbody>
 
 	 <tr><td>Urumqi High-Tech Group</td><td>Anningqu Local Color Town</td><td>Innovation and Entrepreneurship Vehicle</td><td>In Progress</td><td>Total planned area is about 1.8 square kilometers, with additional land reserved to the west. The south, covering about 0.83 square kilometers, is already built up; the north will be newly built, with a planned area of ​​about 0.97 square kilometers.</td><td>2017.7 - 2019.7</td><td>3,750,000,000</td></tr>
 	 <tr><td>Xinjiang High-Tech Wisdom Big Data Information Technology Co., Ltd.</td><td>Urumqi "Visit the People, Benefit the People, and Bring Together the Hearts of the People" Smart Stability Maintenance Management System</td><td>Emerging Industry Cultivation</td><td>In Progress</td><td>The main functions of the Urumqi Stability Maintenance Officers' "Visit, Benefit, Bring Together" Management System include: organization management, information entry, batch processing, query output, report management, system maintenance, targeted persons' category management, database management, etc. It can reduce operational costs, improve work efficiency, and avoid management errors. Based on the complex and diverse information of the persons targeted under "Visit, Benefit, Bring Together," the staff information management system is designed to automate staff management, minimize management costs, and improve work efficiency.</td><td>2017.2 - 2017.10</td><td>1,200,000</td></tr>
 	 <tr><td>Xinjiang Leading Future E-Commerce Co., Ltd.</td><td>"Xinjiang E-Government Procurement One-Stop Procurement and Supply Platform"</td><td>Innovation and Entrepreneurship Service</td><td>In Progress</td><td>Leading Future's O2O office supply procurement platform will make it easier for government, military, business, and direct procurement customers across Xinjiang to purchase a full range of office equipment, such as IT products, office supplies, office paper, IT maintenance, office furniture, sporting goods, business gifts, worker safety equipment, business printing services, office decorations, and various business services.</td><td>2017.1 - 2019.1</td><td>15,000,000</td></tr>
 	 <tr><td>Xinjiang Yun'an Space Digital Technology Co., Ltd.</td><td>Xinjiang Low-Altitude Drone Industry Innovation and Entrepreneurship Service Platform</td><td>Innovation and Entrepreneurship Service Construction</td><td>In Progress</td><td>Build a low-altitude drone industry ecological service system that integrates applied technology research, an applied technology promotion network, innovation and entrepreneurship training and practice, operation and maintenance services, a security control system, and big data.</td><td>2016.6 - 2018.6</td><td>2,500,000</td></tr>
-	 <tr><td>Xinjiang Boao Medical Laboratory Co., Ltd.</td><td>Gene Detection Technology Application in Central and Western Asia Demonstration Base</td><td>Innovation and Entrepreneurship Vehicle</td><td>In Progress</td><td>Build six major technology platforms, including for biochips, high-throughput sequencing, capillary sequencing, fluorescence quantitative PCR, tandem mass spectrometry, and karyotype analysis; build four major technology service systems, including regional quality control centers, regional information centers, regional genetic resource databases, and research centers.</td><td>2017.1 -2 018.12</td><td>30,000,000</td></tr>
+	 <tr><td>Xinjiang Boao Medical Laboratory Co., Ltd.</td><td>Gene Detection Technology Application in Central and Western Asia Demonstration Base</td><td>Innovation and Entrepreneurship Vehicle</td><td>In Progress</td><td>Build six major technology platforms, including for biochips, high-throughput sequencing, capillary sequencing, fluorescence quantitative PCR, tandem mass spectrometry, and karyotype analysis; build four major technology service systems, including regional quality control centers, regional information centers, regional genetic resource databases, and research centers.</td><td>2017.1 - 2018.12</td><td>30,000,000</td></tr>
 	 <tr><td>Xinjiang High-tech Talent Operation Management Co., Ltd.</td><td>Geekspace Station</td><td>Innovation and Entrepreneurship Vehicle Construction</td><td>In Progress</td><td>"Geekspace Station" insists on taking high-end talents, base construction, innovative enterprises, and intermediary service agencies as the starting point, and making the integration of branding, intermediary services, public service platforms, and the creation of innovative environments as the support, in order to build a new type of low-cost, convenient, total-factor makerspace for geeks.</td><td>2017.1 - 2020.1</td><td>1,800,000</td></tr>
 	</tbody></table>
 
